# game-engine-core

./: README.md
application/: Cargo.toml
application/src/: error.rs  lib.rs
application/src/window/: event_loop.rs
logger/: Cargo.toml
logger/src/: lib.rs
logger/tests/: test.rs
