[package]
name = "application"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
logger = { path = "../logger" }
chrono = { version = "0.4" }
winit = { version = "0.28" }