[package]
name = "logger"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["std"] }
anyhow = { version = "1" }

[lib]
crate-type = ["rlib", "dylib"]

[features]
default = ["templates"]
templates = []